--- a/src/Magnum.Common/Magnum.Common.csproj
+++ b/src/Magnum.Common/Magnum.Common.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Monads\Identity.cs" />
     <Compile Include="Monads\List.cs" />
     <Compile Include="Monads\Maybe.cs" />
+    <Compile Include="Reflection\ExpressionVisitor.cs" />
     <Compile Include="Reflection\FastCollection.cs" />
     <Compile Include="Reflection\FastCollectionProperty.cs" />
     <Compile Include="Reflection\ReflectiveVisitorBase.cs" />
@@ -89,6 +90,8 @@
     <Compile Include="StateMachine\BasicEvent.cs" />
     <Compile Include="StateMachine\DataEvent.cs" />
     <Compile Include="StateMachine\Event.cs" />
+    <Compile Include="StateMachine\IStateMachineInspector.cs" />
+    <Compile Include="StateMachine\IStateMachineInspectorSite.cs" />
     <Compile Include="StateMachine\State.cs" />
     <Compile Include="StateMachine\StateEventAction.cs" />
     <Compile Include="StateMachine\StateMachine.cs" />
@@ -116,6 +119,7 @@
     <Compile Include="Serialization\SerializationUtil.cs" />
     <Compile Include="DateTimeExtensions\TimeSpanExtensions.cs" />
     <Compile Include="StateMachine\StateMachineException.cs" />
+    <Compile Include="StateMachine\StateMachineInspector.cs" />
     <Compile Include="Threading\AsyncExecutor.cs" />
     <Compile Include="Threading\AsyncResult.cs" />
     <Compile Include="Threading\IAsyncExecutor.cs" />
