--- a/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
+++ b/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
@@ -71,6 +71,16 @@
   <ItemGroup>
     <Compile Include="Cache_Specs.cs" />
     <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
+    <Compile Include="CommandLine\ArrayExtensions.cs" />
+    <Compile Include="CommandLine\CommandLineParser.cs" />
+    <Compile Include="CommandLine\CommandLineParsing_Specs.cs" />
+    <Compile Include="CommandLine\IArgCommand.cs" />
+    <Compile Include="CommandLine\ICommand.cs" />
+    <Compile Include="CommandLine\NullArgs.cs" />
+    <Compile Include="CommandLine\OneArgument.cs" />
+    <Compile Include="CommandLine\Output.cs" />
+    <Compile Include="CommandLine\TestCommand.cs" />
+    <Compile Include="CommandLine\TwoArguments.cs" />
     <Compile Include="CrazySerializationIdea.cs" />
     <Compile Include="Cryptography\PublicKeyCrypto.cs" />
     <Compile Include="Cryptography\RijndaelCryptographyService_Specs.cs" />
