--- a/src/Magnum.Infrastructure.Specs/Magnum.Infrastructure.Specs.csproj
+++ b/src/Magnum.Infrastructure.Specs/Magnum.Infrastructure.Specs.csproj
@@ -73,11 +73,11 @@
     <Compile Include="StateMachine\StateMachineStorage_Specs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Magnum.Common.Specs\Magnum.Common.Specs.csproj">
+    <ProjectReference Include="..\Magnum.Specs\Magnum.Specs.csproj">
       <Project>{0BEBC5E0-BDC4-421C-971B-2C5BE3204F7C}</Project>
       <Name>Magnum.Common.Specs</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Magnum.Common\Magnum.Common.csproj">
+    <ProjectReference Include="..\Magnum\Magnum.csproj">
       <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
       <Name>Magnum.Common</Name>
     </ProjectReference>
