--- a/src/Magnum.MapReduce.Specs/Magnum.MapReduce.Specs.csproj
+++ b/src/Magnum.MapReduce.Specs/Magnum.MapReduce.Specs.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{0C7ECE2E-7858-4E05-A1BF-2CD2B53C8C06}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -76,7 +76,7 @@
     <Compile Include="WebServerLog_Specs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Magnum.Common\Magnum.Common.csproj">
+    <ProjectReference Include="..\Magnum\Magnum.csproj">
       <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
       <Name>Magnum.Common</Name>
     </ProjectReference>
