--- a/src/Magnum.MapReduce/Magnum.MapReduce.csproj
+++ b/src/Magnum.MapReduce/Magnum.MapReduce.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{9EE2E9D4-1F97-47D9-BBA4-2F9B245B6D8D}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -72,7 +72,7 @@
     <Compile Include="Types\WritableValueBase.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Magnum.Common\Magnum.Common.csproj">
+    <ProjectReference Include="..\Magnum\Magnum.csproj">
       <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
       <Name>Magnum.Common</Name>
     </ProjectReference>
