--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
     <Compile Include="CommandLine\Argument.cs" />
     <Compile Include="CommandLine\ArgumentOrderPolicy.cs" />
+    <Compile Include="CommandLine\ArgumentOrderPolicy_Specs.cs" />
     <Compile Include="CommandLine\ArgumentParsingInstructions.cs" />
     <Compile Include="CommandLine\Argument_Spec.cs" />
     <Compile Include="CommandLine\ArrayExtensions.cs" />
