moving stuff into proper place

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -60,6 +60,19 @@
     <Compile Include="Calendar\IsHoliday.cs" />
     <Compile Include="Calendar\Months.cs" />
     <Compile Include="CollectionExtensions\ComparerExtensions.cs" />
+    <Compile Include="CommandLine\Argument.cs" />
+    <Compile Include="CommandLine\ArgumentOrderPolicy.cs" />
+    <Compile Include="CommandLine\ArgumentParsingInstructions.cs" />
+    <Compile Include="CommandLine\ArrayExtensions.cs" />
+    <Compile Include="CommandLine\CommandLineParser.cs" />
+    <Compile Include="CommandLine\IArgCommand.cs" />
+    <Compile Include="CommandLine\ICommand.cs" />
+    <Compile Include="CommandLine\INamingConvention.cs" />
+    <Compile Include="CommandLine\LongFormConvention.cs" />
+    <Compile Include="CommandLine\NullArgs.cs" />
+    <Compile Include="CommandLine\Output.cs" />
+    <Compile Include="CommandLine\ShortFormConvention.cs" />
+    <Compile Include="CommandLine\UseTypeName.cs" />
     <Compile Include="ComparisonComparer.cs" />
     <Compile Include="Cryptography\EncryptionResult.cs" />
     <Compile Include="Cryptography\ICryptographyService.cs" />
