--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Compile Include="Cache_Specs.cs" />
     <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
+    <Compile Include="CommandLine\AddingCommands_Specs.cs" />
     <Compile Include="CommandLine\ArgumentOrderPolicy_Specs.cs" />
     <Compile Include="CommandLine\Argument_Spec.cs" />
     <Compile Include="CommandLine\CommandLineParsing_Specs.cs" />
