--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -61,16 +61,20 @@
     <Compile Include="Calendar\Months.cs" />
     <Compile Include="CollectionExtensions\ComparerExtensions.cs" />
     <Compile Include="CommandLine\Argument.cs" />
+    <Compile Include="CommandLine\ArgumentOrderException.cs" />
     <Compile Include="CommandLine\Arguments_must_be_positional_then_named.cs" />
     <Compile Include="CommandLine\ArgumentParsingInstructions.cs" />
     <Compile Include="CommandLine\ArrayExtensions.cs" />
     <Compile Include="CommandLine\CommandLineParser.cs" />
+    <Compile Include="CommandLine\IArgumentCommandNameConvention.cs" />
     <Compile Include="CommandLine\IArgumentNameConvention.cs" />
+    <Compile Include="CommandLine\IArgumentOrderPolicy.cs" />
     <Compile Include="CommandLine\IArgumentParsingInstructions.cs" />
     <Compile Include="CommandLine\Argument_long_form_is_full_property_name_lowercased.cs" />
     <Compile Include="CommandLine\NullArgs.cs" />
     <Compile Include="CommandLine\ParsedCommandLineOutput.cs" />
     <Compile Include="CommandLine\Argument_short_form_is_first_letter_lowercase.cs" />
+    <Compile Include="CommandLine\Use_types_name_lowercased_removing_Args_or_Arguments.cs" />
     <Compile Include="ComparisonComparer.cs" />
     <Compile Include="Cryptography\EncryptionResult.cs" />
     <Compile Include="Cryptography\ICryptographyService.cs" />
