--- a/src/Magnum.ActorModel/Magnum.ActorModel.csproj
+++ b/src/Magnum.ActorModel/Magnum.ActorModel.csproj
@@ -45,20 +45,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActorBase.cs" />
-    <Compile Include="ActorBusyException.cs" />
-    <Compile Include="Channels\IntervalSubscriber.cs" />
+    <Compile Include="AsyncCommandQueue.cs" />
+    <Compile Include="Channels\Extensions.cs" />
+    <Compile Include="Exceptions\QueueFullException.cs" />
+    <Compile Include="Channels\Subscribers\IntervalSubscriber.cs" />
+    <Compile Include="Channels\ChannelImpl.cs" />
+    <Compile Include="Channels\Subscribers\ChannelSubscriber.cs" />
+    <Compile Include="Channels\Scheduler.cs" />
     <Compile Include="Channels\Channel.cs" />
-    <Compile Include="Channels\ChannelSubscription.cs" />
-    <Compile Include="Channels\IActionScheduler.cs" />
-    <Compile Include="Channels\IChannel.cs" />
-    <Compile Include="Channels\MostRecentIntervalSubscriber.cs" />
-    <Compile Include="Channels\SubscriptionBase.cs" />
-    <Compile Include="Channels\UniqueIntervalSubscriber.cs" />
+    <Compile Include="Channels\Subscribers\LatestIntervalSubscriber.cs" />
+    <Compile Include="Channels\Subscribers\SubscriberBase.cs" />
+    <Compile Include="Channels\Subscribers\DistinctIntervalSubscriber.cs" />
+    <Compile Include="SynchronousCommandExecutor.cs" />
+    <Compile Include="CommandQueue.cs" />
     <Compile Include="CommandExecutor.cs" />
-    <Compile Include="IActor.cs" />
-    <Compile Include="ICommandExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduledEvent.cs" />
+    <Compile Include="SingleEvent.cs" />
+    <Compile Include="SingleThreadedCommandQueue.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
