added the ability for argument classes to have names that share beginning letters.

--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -72,10 +72,12 @@
     <Compile Include="Cache_Specs.cs" />
     <Compile Include="Calendar\MemorialDayObservedCheck.cs" />
     <Compile Include="CommandLine\ArgumentOrderPolicy_Specs.cs" />
+    <Compile Include="CommandLine\ArgumentWithSameFirstLetter.cs" />
     <Compile Include="CommandLine\Argument_Spec.cs" />
     <Compile Include="CommandLine\CommandLineParsing_Specs.cs" />
     <Compile Include="CommandLine\OneArgument.cs" />
     <Compile Include="CommandLine\TwoArguments.cs" />
+    <Compile Include="CommandLine\Visualizer.cs" />
     <Compile Include="CrazySerializationIdea.cs" />
     <Compile Include="Cryptography\PublicKeyCrypto.cs" />
     <Compile Include="Cryptography\RijndaelCryptographyService_Specs.cs" />
