--- a/src/Magnum.ActorModel/Magnum.ActorModel.csproj
+++ b/src/Magnum.ActorModel/Magnum.ActorModel.csproj
@@ -45,8 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Schedulers\EventBase.cs" />
+    <Compile Include="Schedulers\RecurringEvent.cs" />
     <Compile Include="Schedulers\ActionScheduler.cs" />
-    <Compile Include="AsyncCommandQueue.cs" />
+    <Compile Include="CommandQueues\AsyncCommandQueue.cs" />
     <Compile Include="Channels\Extensions.cs" />
     <Compile Include="Channels\Subscribers\FilteredSubscriber.cs" />
     <Compile Include="CommandContext.cs" />
@@ -62,15 +64,22 @@
     <Compile Include="Channels\Subscribers\DistinctIntervalSubscriber.cs" />
     <Compile Include="Future.cs" />
     <Compile Include="Schedulers\SchedulerControl.cs" />
-    <Compile Include="SynchronousCommandQueue.cs" />
+    <Compile Include="CommandQueues\SynchronousCommandQueue.cs" />
+    <Compile Include="Schedulers\ThreadActionScheduler.cs" />
     <Compile Include="SynchronousCommandExecutor.cs" />
     <Compile Include="CommandQueue.cs" />
     <Compile Include="CommandExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScheduledEvent.cs" />
-    <Compile Include="SingleEvent.cs" />
+    <Compile Include="Schedulers\ScheduledEvent.cs" />
+    <Compile Include="Schedulers\SingleEvent.cs" />
     <Compile Include="ThreadCommandContext.cs" />
     <Compile Include="Schedulers\TimerAction.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Magnum\Magnum.csproj">
+      <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
+      <Name>Magnum</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
