Building an actor model with support for asynchronous web processing. Next up, wrapping it all up with the state machine so that the language syntax can make for pretty actors. :)

--- a/src/Magnum.ActorModel/Magnum.ActorModel.csproj
+++ b/src/Magnum.ActorModel/Magnum.ActorModel.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandQueues\ThreadPoolCommandQueue.cs" />
+    <Compile Include="PooledCommandContext.cs" />
     <Compile Include="Schedulers\EventBase.cs" />
     <Compile Include="Schedulers\RecurringEvent.cs" />
     <Compile Include="Schedulers\ActionScheduler.cs" />
