--- a/src/Magnum.ActorModel.WebSpecs/Magnum.ActorModel.WebSpecs.csproj
+++ b/src/Magnum.ActorModel.WebSpecs/Magnum.ActorModel.WebSpecs.csproj
@@ -78,8 +78,12 @@
     <Compile Include="HttpHandlerAsyncResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestService.cs" />
+    <Compile Include="SimpleRequestActor.cs" />
     <Compile Include="SimpleRequest.cs" />
     <Compile Include="SimpleResponse.cs" />
+    <Compile Include="StateMachineAsyncHandler.ashx.cs">
+      <DependentUpon>StateMachineAsyncHandler.ashx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Magnum.ActorModel\Magnum.ActorModel.csproj">
@@ -94,6 +98,9 @@
   <ItemGroup>
     <Content Include="BasicAsyncHandler.ashx" />
     <Content Include="Global.asax" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="StateMachineAsyncHandler.ashx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
