Trying to move some stuff into the assembly that's common, breaking out the SM stuff from the test and injecting dependencies.

--- a/src/Magnum.ActorModel/Magnum.ActorModel.csproj
+++ b/src/Magnum.ActorModel/Magnum.ActorModel.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActorBase.cs" />
+    <Compile Include="AsyncActor.cs" />
+    <Compile Include="ChannelFactory.cs" />
     <Compile Include="CommandQueues\ThreadPoolCommandQueue.cs" />
     <Compile Include="PooledCommandContext.cs" />
     <Compile Include="Schedulers\EventBase.cs" />
