--- a/src/Magnum.ActorModel.WebSpecs/Magnum.ActorModel.WebSpecs.csproj
+++ b/src/Magnum.ActorModel.WebSpecs/Magnum.ActorModel.WebSpecs.csproj
@@ -61,6 +61,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActorHttpAsyncHandler.cs" />
     <Compile Include="BasicAsyncHandler.ashx.cs">
       <DependentUpon>BasicAsyncHandler.ashx</DependentUpon>
     </Compile>
@@ -81,9 +82,7 @@
     <Compile Include="SimpleRequestActor.cs" />
     <Compile Include="SimpleRequest.cs" />
     <Compile Include="SimpleResponse.cs" />
-    <Compile Include="StateMachineAsyncHandler.ashx.cs">
-      <DependentUpon>StateMachineAsyncHandler.ashx</DependentUpon>
-    </Compile>
+    <Compile Include="StructureMapChannelFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Magnum.ActorModel\Magnum.ActorModel.csproj">
