--- a/src/Magnum.ActorModel.WebSpecs/Web.config
+++ b/src/Magnum.ActorModel.WebSpecs/Web.config
@@ -4,7 +4,9 @@
 	<system.web>
 		<authentication mode="Windows"/>
 		<httpHandlers />
-		<httpModules />
+    <httpModules>
+      <add name="RoutingModule" type="System.Web.Routing.UrlRoutingModule, System.Web.Routing, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </httpModules>
     <compilation debug="true" />
 	</system.web>
 
