Beating on this thing until it makes sense -- IOC is still there for actors in the ping pong demo

--- a/src/Magnum.ActorModel.Specs/Magnum.ActorModel.Specs.csproj
+++ b/src/Magnum.ActorModel.Specs/Magnum.ActorModel.Specs.csproj
@@ -48,17 +48,23 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionTimer_Specs.cs" />
+    <Compile Include="Calculator_Example.cs" />
     <Compile Include="Channel_Specs.cs" />
     <Compile Include="CommandQueue_Specs.cs" />
+    <Compile Include="Demos\PingPong\Ping.cs" />
+    <Compile Include="Demos\PingPong\PingPong_Demo.cs" />
+    <Compile Include="Demos\PingPong\Pong.cs" />
     <Compile Include="Demos\Scoreboard\HighScoreBoard.cs" />
     <Compile Include="Demos\Scoreboard\HighScoreBoard_Specs.cs" />
     <Compile Include="Demos\Scoreboard\Messages\UpdateHighScore.cs" />
     <Compile Include="Demos\Scoreboard\ScoreboardRegistry.cs" />
     <Compile Include="Demos\Scoreboard\Scoreboard_Demo.cs" />
+    <Compile Include="PingPong_Example.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadActionScheduler_Specs.cs" />
   </ItemGroup>
