--- a/src/Magnum.ActorModel/Magnum.ActorModel.csproj
+++ b/src/Magnum.ActorModel/Magnum.ActorModel.csproj
@@ -48,38 +48,31 @@
     <Compile Include="ActorBase.cs" />
     <Compile Include="AsyncActor.cs" />
     <Compile Include="ChannelFactory.cs" />
+    <Compile Include="CommandQueues\ThreadCommandQueue.cs" />
     <Compile Include="CommandQueues\ThreadPoolCommandQueue.cs" />
-    <Compile Include="PooledCommandContext.cs" />
     <Compile Include="Schedulers\EventBase.cs" />
     <Compile Include="Schedulers\RecurringEvent.cs" />
-    <Compile Include="Schedulers\ActionScheduler.cs" />
     <Compile Include="CommandQueues\AsyncCommandQueue.cs" />
     <Compile Include="Channels\Extensions.cs" />
     <Compile Include="Channels\Subscribers\FilteredSubscriber.cs" />
-    <Compile Include="CommandContext.cs" />
     <Compile Include="Exceptions\QueueFullException.cs" />
     <Compile Include="Channels\Subscribers\IntervalSubscriber.cs" />
-    <Compile Include="Channels\ChannelImpl.cs" />
+    <Compile Include="Channels\SynchronousChannel.cs" />
     <Compile Include="Channels\Subscribers\ChannelSubscriber.cs" />
-    <Compile Include="Schedulers\PendingAction.cs" />
     <Compile Include="Scheduler.cs" />
     <Compile Include="Channels\Channel.cs" />
     <Compile Include="Channels\Subscribers\LatestIntervalSubscriber.cs" />
     <Compile Include="Channels\Subscribers\SubscriberBase.cs" />
     <Compile Include="Channels\Subscribers\DistinctIntervalSubscriber.cs" />
     <Compile Include="Future.cs" />
-    <Compile Include="Schedulers\SchedulerControl.cs" />
     <Compile Include="CommandQueues\SynchronousCommandQueue.cs" />
-    <Compile Include="Schedulers\ThreadActionScheduler.cs" />
+    <Compile Include="Schedulers\ThreadPoolScheduler.cs" />
     <Compile Include="StateDrivenActor.cs" />
-    <Compile Include="SynchronousCommandExecutor.cs" />
     <Compile Include="CommandQueue.cs" />
-    <Compile Include="CommandExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schedulers\ScheduledEvent.cs" />
     <Compile Include="Schedulers\SingleEvent.cs" />
     <Compile Include="ThreadCommandContext.cs" />
-    <Compile Include="Schedulers\TimerAction.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Magnum\Magnum.csproj">
