Messing around with some reflection expression tools

--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -98,6 +98,11 @@
     <Compile Include="Linq\FileRepository.cs" />
     <Compile Include="Linq\FlattenedObject_Specs.cs" />
     <Compile Include="Metrics\Counter_Specs.cs" />
+    <Compile Include="Reflection\GenericMethodInvoker_Specs.cs" />
+    <Compile Include="Reflection\InstanceBuilder.cs" />
+    <Compile Include="Reflection\ObjectBuilder.cs" />
+    <Compile Include="Reflection\ObjectBuilder_Specs.cs" />
+    <Compile Include="Reflection\TypeInstanceBuilder.cs" />
     <Compile Include="StateMachine\FileImportWorkflow.cs" />
     <Compile Include="StateMachine\StateVisualizer_Specs.cs" />
     <Compile Include="TypedKey_Specs.cs" />
