I'm really just messing around with monads with this, mostly in the specs so nothing concrete yet.

--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Linq\FileRepository.cs" />
     <Compile Include="Linq\FlattenedObject_Specs.cs" />
     <Compile Include="Metrics\Counter_Specs.cs" />
+    <Compile Include="Monads\Parser_Specs.cs" />
     <Compile Include="Reflection\GenericMethodInvoker_Specs.cs" />
     <Compile Include="Reflection\InstanceBuilder.cs" />
     <Compile Include="Reflection\ObjectBuilder.cs" />
